--- a/src/main/resources/manifest.json
+++ b/src/main/resources/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Getting started example",
+  "name": "Crawl Music Extension",
   "description": "This extension allows the user to change the background color of the current page.",
   "version": "1.0.1",
 
@@ -12,6 +12,10 @@
 
   "permissions": [
     "activeTab",
-    "storage"
-  ]
+    "storage",
+    "background"
+  ],
+  "background": {
+    "page": "background.html"
+  }
 }
